--- a/doc/服务器准备.md
+++ b/doc/服务器准备.md
@@ -1,7 +1,5 @@
 # 服务器准备
 
-[TOC]
-
 ## 服务器信息
 
 |   名称   |      ip      |  系统   | 内存 | 硬盘 |
@@ -189,7 +187,7 @@ cd /usr/local
 tar -zxvf jdk-8u231-linux-x64.tar.gz
 
 # 修改配置文件
-vim /etc/profile
+vim /etc/profile.d/my_env.sh
 # 在末尾添加，JAVA_HOME根据实际情况修改
 # java environment
 JAVA_HOME=/usr/local/jdk1.8.0_231
